Crud on builduing done"

--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -1,5 +1,7 @@
 <div class="wrapper">
   <div class="container">
     <h1>Show page for Building id: <%=  @building.id %></h1>
+    <p> title: <%= @building.title  %></p>
+    <p> description: <%= @building.description  %></p>
   </div>
 </div>
