Cards index and building show stable

--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -3,5 +3,11 @@
     <h1>Show page for Building id: <%=  @building.id %></h1>
     <p> title: <%= @building.title  %></p>
     <p> description: <%= @building.description  %></p>
+    <p>fotos: <%= @photos.count  %></p>
+    <div class="row photo-container ">
+      <% @photos.each do |photo| %>
+        <%= render 'shared/photo_card', photo: photo %>
+      <% end %>
+    </div>
   </div>
 </div>
