--- a/app/views/shared/_form_building.html.erb
+++ b/app/views/shared/_form_building.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for([building], :html => { :multipart => true }) do |f| %>
   <%= f.input :title %>
   <%= f.input :description %>
-  <%= f.input :type %>
+  <%= f.input :unit_type %>
   <%= f.input :square_meters %>
   <%= f.input :address %>
   <%= f.input :cep %>
