--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,12 +1,10 @@
-.footer {
+.footer-corretor {
   display: flex;
-  position: absolute;
-  bottom: 0px;
-  background: #F4F4F4;
+  background:white;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
-  padding: 0px 50px;
+  height: 80px;
+  padding: 0px 20px;
   color: rgba(0,0,0,0.3);
   width: 100%;
 
