--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -1,5 +1,8 @@
-<div class="wrapper">
-  <div class="container">
+  <div class="container building-index">
     <h1>Escolha o seu imóvel</h1>
+    <div class="row building-card-container">
+      <% @buildings.each do |building| %>
+        <%= render 'shared/building_card', building: building %>
+      <% end %>
+    </div>
   </div>
-</div>
