--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,7 @@
     <a href="#"><i class="fa fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    This footer is made with <i class="fa fa-heart"></i> at Le Wagon
+    Built at OO labs
     <%= link_to t(".sign_in", default: "Admin-Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link footer-admin-login" %>
   </div>
 </div>
