--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -5,4 +5,12 @@
         <%= render 'shared/building_card', building: building %>
       <% end %>
     </div>
+
+    <div
+      id="map"
+      style="width: 100%;
+      height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+    >
+    </div>
   </div>
