--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -7,6 +7,17 @@
         <%= render 'shared/photo_card', photo: photo %>
       <% end %>
     </div>
+    <div class="map-container">
+      <div
+        id="map"
+        style="width: 100%;
+        height: 600px;"
+        data-markers="<%= @markers.to_json %>"
+      ></div>
+    </div>
+
+
+
     <% @photos.each do |photo| %>
       <%= render 'shared/photo_modal', photo: photo %>
     <% end %>
