--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,19 @@ $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
+$mid-gray: #606470;
+$heavy-gray:#323643;
+
+// Palette main
+$light: #fff9e0;
+$mid: #f1c550;
+$contrast: #ff6600;
+$heavy: #ce2525;
+
+
+//Objects color background
+$user-form: $mid-gray;
+$navbar: $heavy;
+$footer: $contrast;
+
+
