--- a/app/views/buildings/edit.html.erb
+++ b/app/views/buildings/edit.html.erb
@@ -1,6 +1,4 @@
-<div class="wrapper">
-  <div class="container">
-    <h1>Building#Edit</h1>
-    <%= render 'shared/form_building', building: @building  %>
-  </div>
+<div class="container">
+  <h1>Editar Cadastro</h1>
+  <%= render 'shared/form_building', building: @building  %>
 </div>
