--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,3 @@
-<div class="wrapper">
-  <div class="container">
-    <h1>Pages#home</h1>
-    <h2>Canção</h2>
-    <p>Find me in app/views/pages/home.html.erb</p>
-  </div>
+<div class="container">
+  <h1>Bem-vindo a: <%= company.name %></h1>
 </div>
