--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,12 +1,13 @@
 .footer-corretor {
   display: flex;
-  background:white;
+  background:$footer;
   align-items: center;
   justify-content: space-between;
-  height: 80px;
+  height: var(--footer-height);
   padding: 0px 20px;
   color: rgba(0,0,0,0.3);
-  width: 100%;
+  position: relative;
+  bottom: 0px;
 
 }
 .footer-links {
@@ -23,12 +24,24 @@
 .footer-links a:hover {
   opacity: 1;
 }
+
+.footer-company-info{
+  ul{
+      list-style-type: none;
+      li{
+        font-size:9px;
+      }
+  }
+}
 .footer .fa-heart {
   color: #D23333;
 }
 
 .footer-copyright {
   text-align: right;
+  p {
+    font-size: 8px;
+  }
 }
 
 .footer-admin-login {
