--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -1,25 +1,25 @@
-<div class="wrapper">
-  <div class="container">
-    <h1>Show page for Building id: <%=  @building.id %></h1>
-    <%= render 'shared/building_info',building: @building %>
-    <div class="row photo-container ">
-      <% @photos.each do |photo| %>
-        <%= render 'shared/photo_card', photo: photo %>
-      <% end %>
-    </div>
-    <div class="map-container">
-      <div
-        id="map"
-        style="width: 100%;
-        height: 600px;"
-        data-markers="<%= @markers.to_json %>"
-      ></div>
-    </div>
+<div class="container">
+  <%= render 'shared/building_actions'  %>
 
-
-
+  <h1>Show page for Building id: <%=  @building.id %></h1>
+  <%= render 'shared/building_info',building: @building %>
+  <div class="row photo-container ">
     <% @photos.each do |photo| %>
-      <%= render 'shared/photo_modal', photo: photo %>
+      <%= render 'shared/photo_card', photo: photo %>
     <% end %>
   </div>
+  <div class="map-container">
+    <div
+      id="map"
+      style="width: 100%;
+      height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+    ></div>
+  </div>
+
+
+
+  <% @photos.each do |photo| %>
+    <%= render 'shared/photo_modal', photo: photo %>
+  <% end %>
 </div>
