--- a/app/views/shared/_form_building.html.erb
+++ b/app/views/shared/_form_building.html.erb
@@ -6,5 +6,5 @@
   <%= f.input :address, as: :string  %>
   <%= f.input :cep %>
   <%= f.input :photos, as: :file,label: 'Adicionar imagens',:input_html => {  :multiple => true }, name: "building[building_attributes][][photos]" %>
-  <%= f.submit  %>
+  <%= f.submit class: 'btn btn-success btn-lg'  %>
 <% end  %>
