--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -1,9 +1,19 @@
-<div class="container building-index">
-  <h1>Escolha o seu imóvel</h1>
-  <div class="row building-card-container">
-    <% @buildings.each do |building| %>
-      <%= render 'shared/building_card', building: building %>
-    <% end %>
+<div class="index-container">
+  <div class="col-xs-12 col-sm-3 left-container">
+    <div
+      id="map"
+      style="width: 100%;
+      height: 100%;"
+      data-markers="<%= @markers.to_json %>"
+    ></div>
   </div>
 
+  <div class="col-xs-12 col-sm-9 right-container">
+    <h1>Ache o seu imóvel dos seus sonhos</h1>
+    <div class="row building-card-container">
+      <% @buildings.each do |building| %>
+        <%= render 'shared/building_card', building: building %>
+      <% end %>
+    </div>
+  </div>
 </div>
