--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,6 +11,9 @@ $light-gray: #F4F4F4;
 $mid-gray: #606470;
 $heavy-gray:#323643;
 
+// Gradients
+$gradient-blue: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%);
+
 // Palette main
 $light: #fff9e0;
 $mid: #f1c550;
