--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -1,3 +1,4 @@
+<h1><%= @company  %></h1>
 <div class="index-container">
   <div class="col-xs-12 col-sm-3 left-container">
     <div
@@ -9,7 +10,7 @@
   </div>
 
   <div class="col-xs-12 col-sm-9 right-container">
-    <h1>Ache o seu imóvel dos seus sonhos</h1>
+    <h1>Encontre o imóvel dos seus sonhos</h1>
     <div class="row building-card-container">
       <% @buildings.each do |building| %>
         <%= render 'shared/building_card', building: building %>
