--- a/app/views/shared/_building_card.html.erb
+++ b/app/views/shared/_building_card.html.erb
@@ -1,5 +1,5 @@
 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-  <div class="card building-card" style="background-image: url('<%= cl_image_path building.photos.first.image %>');">
+  <div class="card building-card" style="background-image: url('<%= first_image(building)%>');">
     <a class="card-link" href="<%= building_path(building) %>" >
       <div class="card-category"><%= building.unit_type  %></div>
       <div class="card-description">
